Search box and logo in place

--- a/homepage.html
+++ b/homepage.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-	<div class="title">
-		<img src="https://www.google.com/images/srpr/logo11w.png">
-	</div>
+	<img id="title" src="https://www.google.com/images/srpr/logo11w.png">
+	<form>
+		<input type="text" name="search-bar">
+	</form>
 </body>
 
 </html>
