--- a/homepage.html
+++ b/homepage.html
@@ -8,10 +8,13 @@
 </head>
 
 <body>
-	<img id="title" src="https://www.google.com/images/srpr/logo11w.png">
-	<form>
-		<input type="text" name="search-bar">
-	</form>
+		<img id="title" src="https://www.google.com/images/srpr/logo11w.png">
+		<form>
+			<input type="text" name="search-bar"> 
+			<img id="voice_icon" src="http://attachments.gfan.com/forum/attachments2/day_110507/1105071503ac8044470039765c.png"> <!-- this is going in the search box -->
+			<input id="gSearch" type="submit" value="Google Search">
+			<input id="luckySearch" type="submit" value="I'm Feeling Lucky">
+		</form>
 </body>
 
 </html>
