header inline with logo

--- a/homepage.html
+++ b/homepage.html
@@ -9,12 +9,13 @@
 
 <body>
 		
-	<div id="header">
-		<p>
-			+Connor
-			Gmail
-			Images
-		</p>
+	<div class="header">
+		<ul>
+			<li>+Connor</li>
+			<li>Gmail</li>
+			<li>Images</li>
+			<li></li>
+		</ul>
 	</div>
 
 	<img id="title" src="https://www.google.com/images/srpr/logo11w.png"> <!-- google logo -->
