satisfied with result

--- a/homepage.html
+++ b/homepage.html
@@ -34,6 +34,11 @@
 			<li class="titleFooter">Terms</li>
 			<li class="titleFooter">Privacy</li>
 		</ul>
+		<ul id="footer2">
+			<li class="titleFooter2">Advertising</li>
+			<li class="titleFooter2">Business</li>
+			<li class="titleFooter2">About</li>
+		</ul>
 	</div>
 
 </body>
